Update README for JavaFX